--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     compile "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
     compile "com.google.code.gson:gson:$RETROFIT_VERSION"
-    compile 'xyz.sahildave:searchviewlayout:0.6'
+    compile project(':searchviewlayout')
 }
