--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,11 +26,13 @@ repositories {
 }
 
 dependencies {
-    final PLAY_SERVICE_VERSION = '11.4.2';
+    final PLAY_SERVICE_VERSION = '11.4.2'
     final SUPPORT_LIBRARY_VERSION = '25.3.1';
     final AUTO_VALUE_VERSION = '1.5'
     final AUTO_VALUE_GSON_VERSION = '0.6.0'
     final RETROFIT_VERSION = '2.3.0';
+    final GLIDE_VERSION = '4.1.1'
+    final BUTTERKNIFE_VERSION = '8.5.1'
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -41,12 +43,12 @@ dependencies {
     compile "com.android.support:support-vector-drawable:$SUPPORT_LIBRARY_VERSION"
     testCompile 'junit:junit:4.12'
 
-    compile "com.android.support:cardview-v7:$SUPPORT_LIBRARY_VERSION"
-    compile 'com.github.bumptech.glide:glide:4.1.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.1.1'
     compile 'me.relex:circleindicator:1.2.2@aar'
-    compile 'com.jakewharton:butterknife:8.5.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    compile "com.android.support:cardview-v7:$SUPPORT_LIBRARY_VERSION"
+    compile "com.github.bumptech.glide:glide:$GLIDE_VERSION"
+    annotationProcessor "com.github.bumptech.glide:compiler:$GLIDE_VERSION"
+    compile "com.jakewharton:butterknife:$BUTTERKNIFE_VERSION"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$BUTTERKNIFE_VERSION"
 
     // Replace provided dependency below with official AutoValue once this issue is fixed
     // https://github.com/google/auto/issues/268
@@ -62,4 +64,5 @@ dependencies {
     compile "com.google.code.gson:gson:$RETROFIT_VERSION"
     compile project(':searchviewlayout')
     compile "com.google.android.gms:play-services-maps:$PLAY_SERVICE_VERSION"
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
