--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,5 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.5'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
