--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".ui.main.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar.TransparentStatusBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,6 +26,13 @@
             android:label="@string/title_attractions" />
         <activity
             android:name=".ui.attraction.details.AttractionDetailsActivity"
+            android:label=""
+            android:theme="@style/AppTheme.NoActionBar.TransparentStatusBar" />
+        <activity
+            android:name=".ui.tourpackage.TourPackageListActivity"
+            android:label="@string/title_tour_packages" />
+        <activity
+            android:name=".ui.tourpackage.details.TourPackageDetailsActivity"
             android:label="" />
 
         <meta-data
